👌 IMPROVE: Clean up theming
Theming tmux is a total hassle - most themes don't have a color theme or it's inconsistent.
Trying to fine-tune tmux colors to match with kitty colors is a lot of hassle and a wasted effort for me. I will try to live with default tmux.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,12 +1,11 @@
+# true colors
+set -g terminal-overrides ',xterm-256color:Tc'
+set -g default-terminal "tmux-256color"
+set -as terminal-overrides ',xterm*:sitm=\E[3m'
+
 # scrolling
 set -g mouse on
 bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e; send-keys -M'"
-
-# color theme
-# Load the tmux theme, based on the environment variable TMUX_THEME
-# If TMUX_THEME is not set or empty, use ~/.tmux/themes/tmux.default.theme
-# https://www.onwebsecurity.com/configuration/customize-and-theme-tmux-the-easy-way.html
-run-shell "tmux source-file ~/.tmux/themes/tmux.\${TMUX_THEME:-default}.theme"
 
 # kitty history
 bind-key o capture-pane -S - -e \; save-buffer /tmp/tmux-buffer \; new-window -a "less +G -fr /tmp/tmux-buffer\n"
@@ -113,7 +112,6 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
-set -g @plugin 'arcticicestudio/nord-tmux'
 
 # tmux resurrect options
 set -g @resurrect-hook-pre-restore-pane-processes 'tmux switch-client -n && tmux kill-session -t 0'
