🐛 FIX: Use apprentice kitty theme from dexpota/kitty-themes
Source: https://github.com/dexpota/kitty-themes/blob/master/themes/Apprentice.conf

--- a/kitty/apprentice.conf
+++ b/kitty/apprentice.conf
@@ -1,47 +1,26 @@
-background #262626
-foreground #bcbcbc
+# Apprentice by Romain Lafourcade, https://github.com/romainl
+# This work is licensed under the terms of the MIT license.
+# For a copy, see https://opensource.org/licenses/MIT.
 
-selection_background #3a3e4e
-selection_foreground #bcbcbc
-
-cursor #6c6c6c
-cursor_text_color background
-
-active_tab_background #262626
-active_tab_foreground #bcbcbc
-active_tab_font_style bold
-inactive_tab_background #262626
-inactive_tab_foreground #6c6c6c
-inactive_tab_font_style normal
-
-# Black
-color0 #1c1c1c
-color8 #585858
-
-# Red
-color1 #af5f5f
-color9 #ff8700
-
-# Green
-color2 #5f875f
-color10 #87af87
-
-# Yellow
-color3 #87875f
-color11 #ffffaf
-
-# Blue
-color4 #5f87af
-color12 #8fafd7
-
-# Magenta
-color5 #5f5f87
-color13 #8787af
-
-# Cyan
-color6 #5f8787
-color7 #5fafaf
-
-# White
-color7 #6c6c6c
-color15 #ffffff
+cursor     #c7c7c7
+cursor_text_color #feffff
+selection_foreground #3e3e3e
+selection_background #c1ddff
+foreground #c8c8c8
+background #323232
+color0     #252525
+color8     #555555
+color1     #be7472
+color9     #ff9900
+color2     #709772
+color10    #97bb98
+color3     #989772
+color11    #fefdbc
+color4     #7199bc
+color12    #9fbdde
+color5     #727399
+color13    #989abc
+color6     #719899
+color14    #6fbbbc
+color7     #7f7f7f
+color15    #feffff
