--- a/kitty/forest-night.conf
+++ b/kitty/forest-night.conf
@@ -3,7 +3,7 @@ background            #323d43
 selection_foreground  #3c474d
 selection_background  #465258
 url_color             #415c6d
-cursor                #87c095
+cursor                #83b6af
 
 # black
 color0   #505a60
