👌 IMPROVE: Copy selected text

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -2,6 +2,7 @@ font_family Victor Mono SemiBold
 font_size 13.0
 enable_audio_bell no
 allow_remote_control yes
+copy_on_select yes
 include nord.conf
 
 map ctrl+shift+. next_tab
