📦 NEW: Add keyboard shortcut for Firefox (i3)

--- a/i3/config
+++ b/i3/config
@@ -58,9 +58,10 @@ bindsym $mod+Ctrl+m exec pavucontrol
 bindsym $mod+Ctrl+b exec kitty -e 'bmenu'
 bindsym $mod+F2 exec chromium
 bindsym $mod+F3 exec pcmanfm
-# bindsym $mod+F3 exec ranger
 bindsym $mod+Shift+F3 exec pcmanfm_pkexec
-bindsym $mod+F5 exec kitty -e 'mocp'
+bindsym $mod+F4 exec firefox-developer-edition
+bindsym $mod+F5 exec kitty -e 'ranger'
+bindsym $mod+F6 exec kitty -e 'mocp'
 bindsym $mod+t exec --no-startup-id pkill picom
 bindsym $mod+Ctrl+t exec --no-startup-id picom -b
 bindsym $mod+Shift+d --release exec "killall dunst; exec notify-send 'restart dunst'"
