--- a/i3/config
+++ b/i3/config
@@ -59,7 +59,7 @@ bindsym $mod+Ctrl+b exec kitty -e 'bmenu'
 bindsym $mod+F2 exec chromium
 bindsym $mod+F3 exec pcmanfm
 bindsym $mod+Shift+F3 exec pcmanfm_pkexec
-bindsym $mod+F4 exec firefox-developer-edition
+bindsym $mod+F4 exec icecat
 bindsym $mod+F5 exec kitty -e 'ranger'
 bindsym $mod+F6 exec kitty -e 'mocp'
 bindsym $mod+t exec --no-startup-id pkill picom
