--- a/kitty/everforest-dark.conf
+++ b/kitty/everforest-dark.conf
@@ -1,13 +1,13 @@
 foreground            #d8cacc
 background            #323d43
 selection_foreground  #3c474d
-selection_background  #465258
+selection_background  #525c62
 url_color             #415c6d
-cursor                #83b6af
+cursor                #7fbbb3
 
 # black
-color0   #505a60
-color8   #465258
+color0   #4a555b
+color8   #525c62
 
 # red
 color1   #e68183
@@ -18,20 +18,20 @@ color2   #a7c080
 color10  #a7c080
 
 # yellow
-color3   #d9bb80
-color11  #d9bb80
+color3   #dbbc7f
+color11  #dbbc7f
 
 # blue
-color4  #83b6af
-color12 #83b6af
+color4  #7fbbb3
+color12 #7fbbb3
 
 # magenta
-color5   #d39bb6
-color13  #d39bb6
+color5   #d699b6
+color13  #d699b6
 
 # cyan
-color6   #87c095
-color14  #87c095
+color6   #83c092
+color14  #83c092
 
 # white
 color7   #d8caac
