--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -80,8 +80,11 @@ bind-key S display-panes\; command-prompt -p "pane #: "  "swap-pane -t '%%'"
 # Quickly view system & process info in ytop (htop alternative in Rust)
 bind-key h split-window -h "ytop"
 
-# Quickly edit todo/Dumpfile
-bind-key t split-window -h "nvim ~/wiki/braindump/Dumpfile.md"
+# Quickly edit dumpfile
+bind-key b split-window -h "nvim ~/wiki/braindump/Dumpfile.md"
+
+# Quickly edit todo.txt
+bind-key t split-window -h "nvim ~/wiki/braindump/todo.txt"
 
 # Quickly edit a file in your wiki
 bind-key v split-window -h -c ~/wiki "nvim $(fd | fzy)"
