📦 NEW: Use JetBrains Mono font

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,5 +1,6 @@
-font_family Victor Mono SemiBold
+font_family JetBrains Mono Regular
 font_size 13.0
+adjust_line_height 120%
 enable_audio_bell no
 allow_remote_control yes
 copy_on_select yes
