👌 IMPROVE: Change location for todo.txt file

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -88,7 +88,7 @@ bind-key h split-window -h "ytop"
 bind-key b split-window -h "nvim ~/wiki/braindump/Dumpfile.md"
 
 # Quickly edit todo.txt
-bind-key t split-window -h "nvim ~/wiki/braindump/todo.txt"
+bind-key t split-window -h "nvim ~/todo/todo.txt"
 
 # Quickly edit a file in your wiki
 bind-key v split-window -h -c ~/wiki "nvim $(fd | fzy)"
