--- a/todo.txt-cli/config
+++ b/todo.txt-cli/config
@@ -1,4 +1,4 @@
-export TODO_DIR="$HOME/wiki/braindump"
+export TODO_DIR="$HOME/todo"
 export TODO_FILE="$TODO_DIR/todo.txt"
 export DONE_FILE="$TODO_DIR/done.txt"
 export REPORT_FILE="$TODO_DIR/report.txt"
