👌 IMPROVE: Move notes

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -85,7 +85,7 @@ bind-key S display-panes\; command-prompt -p "pane #: "  "swap-pane -t '%%'"
 bind-key h split-window -h "ytop"
 
 # Quickly edit dumpfile
-bind-key b split-window -h "nvim ~/wiki/braindump/Dumpfile.md"
+bind-key b split-window -h "nvim ~/notes/braindump.md"
 
 # Quickly edit todo.txt
 bind-key t split-window -h "nvim ~/todo/todo.txt"
