👌 IMPROVE: Add options for MacOs

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,10 +1,18 @@
 font_family JetBrains Mono Regular
 font_size 13.0
+disable_ligatures_in_all cursor
 adjust_line_height 120%
 enable_audio_bell no
 allow_remote_control yes
 copy_on_select yes
+macos_option_as_alt yes
+url_style single
+open_url_modifiers ctrl
 include nord.conf
+
+map cmd+c copy_to_clipboard
+map cmd+v paste_from_clipboard
+map shift+insert paste_from_clipboard
 
 map ctrl+shift+. next_tab
 map ctrl+shift+, previous_tab
