👌 IMPROVE: Show pane number in tmux status bar

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -112,7 +112,7 @@ bind-key C-k run-shell 'tmux switch-client -n \; kill-session -t "$(tmux display
 set-option -g status-bg '#707880'
 set-option -g status-fg '#C5C8C6'
 set-option -g status-left-length 50
-set-option -g status-right "#(date '+%a, %b %d - %H:%M') "
+set-option -g status-right "#{pane_index} | #(date '+%a, %b %d - %H:%M') "
 set-option -g status-interval 60
 
 # Plugins
