📦 NEW: Set tmux boot option (kitty)

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -130,5 +130,6 @@ set -g @resurrect-capture-pane-contents 'on'
 
 # tmux continuum options
 set -g @continuum-restore 'on'
+set -g @continuum-boot-options 'kitty'
 
 run -b '~/.tmux/plugins/tpm/tpm'
