🐛 FIX: Include Kitty nord theme per default

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -8,7 +8,7 @@ copy_on_select yes
 macos_option_as_alt yes
 url_style single
 open_url_modifiers ctrl
-include nord.conf
+include themes/nord.conf
 
 map cmd+c copy_to_clipboard
 map cmd+v paste_from_clipboard
