👌 IMPROVE: Adjust darcula background color

--- a/kitty/themes/darcula.conf
+++ b/kitty/themes/darcula.conf
@@ -1,4 +1,4 @@
-background            #202020
+background            #2B2B2B
 foreground            #adadad
 cursor                #ffffff
 selection_background  #1a3272
