📦 NEW: Use bottom (htop alternative)

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -81,8 +81,8 @@ bind-key s command-prompt -p "send pane to: "  "join-pane -v -t '%%'"
 # Easily swap a pane (targeted by pane number) with the current pane
 bind-key S display-panes\; command-prompt -p "pane #: "  "swap-pane -t '%%'"
 
-# Quickly view system & process info in ytop (htop alternative in Rust)
-bind-key h split-window -h "ytop"
+# Quickly view system & process info in bottom (htop alternative in Rust)
+bind-key h split-window -h "btm"
 
 # Quickly edit dumpfile
 bind-key b split-window -h "nvim ~/notes/braindump.md"
