📦 NEW: Remove todo.sh

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -88,7 +88,7 @@ bind-key h split-window -h "btm"
 bind-key b split-window -h "nvim ~/notes/braindump.md"
 
 # Quickly edit todo.txt
-bind-key t split-window -h "nvim ~/todo/todo.txt"
+bind-key t split-window -h "nvim ~/notes/todo.md"
 
 # Quickly edit a file in your wiki
 bind-key v split-window -h -c ~/wiki "nvim $(fd | fzy)"
