📦 NEW: Add new shortcut for work todos

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -87,8 +87,11 @@ bind-key h split-window -h "btm"
 # Quickly edit dumpfile
 bind-key b split-window -h "nvim ~/notes/braindump.md"
 
-# Quickly edit todo.txt
+# Quickly edit todo file
 bind-key t split-window -h "nvim ~/notes/todo.md"
+
+# Quickly edit work file
+bind-key T split-window -h "nvim ~/notes/work.md"
 
 # Quickly edit a file in your wiki
 bind-key v split-window -h -c ~/wiki "nvim $(fd | fzy)"
