🐛 FIX: Remove outdated config options

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,13 +1,11 @@
-font_family JetBrains Mono Regular
+font_family JetBrains Mono
 font_size 13.0
-disable_ligatures_in_all cursor
 adjust_line_height 120%
 enable_audio_bell no
 allow_remote_control yes
 copy_on_select yes
 macos_option_as_alt yes
 url_style single
-open_url_modifiers ctrl
 include themes/nord.conf
 
 map cmd+c copy_to_clipboard
