👌 IMPROVE: Update brewfile

--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -15,6 +15,7 @@ brew "bottom"
 brew "broot"
 brew "caddy"
 brew "python@3.9"
+brew "qemu"
 brew "colima"
 brew "curlie"
 brew "docker"
@@ -22,13 +23,16 @@ brew "docker-credential-helper"
 brew "exa"
 brew "fd"
 brew "fish"
+brew "fisher"
 brew "fnm"
+brew "fzf"
 brew "fzy"
 brew "gh"
 brew "git"
 brew "git-delta"
 brew "glow"
 brew "go"
+brew "python@3.10"
 brew "grip"
 brew "hugo"
 brew "jq"
@@ -53,27 +57,12 @@ brew "xclip"
 brew "zoxide"
 brew "eth-p/software/bat-extras"
 brew "tankerhq/repo/ruplacer"
-cask "1password"
 cask "adguard"
-cask "alfred"
-cask "discord"
-cask "dropbox"
-cask "firefox"
-cask "font-jetbrains-mono"
-cask "google-chrome"
-cask "insync"
-cask "jitsi-meet"
+cask "insomnia"
 cask "kitty"
-cask "libreoffice"
 cask "macdown"
-cask "marmaduke-chromium"
-cask "marmaduke-chromium-ungoogled"
 cask "microsoft-auto-update"
 cask "microsoft-edge"
 cask "microsoft-teams"
-cask "moom"
-cask "slack"
-cask "spotify"
-cask "thunderbird"
-cask "xquartz"
+cask "warp"
 cask "zoom"
