📦 NEW: add convenience functions for choosing session & killing session

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -100,7 +100,7 @@ bind-key v split-window -h -c ~/wiki "nvim $(fd | fzy)"
 bind-key C-w choose-tree
 
 # Fuzzy tmux session switching
-bind w split-window -v "tmux list-sessions | sed -E 's/:.*$//' | rg -v \"^$(tmux display-message -p '#S')\$\" | fzy | xargs tmux switch-client -t"
+bind w display-popup -E "tmux list-sessions | sed -E 's/:.*$//' | rg -v \"^$(tmux display-message -p '#S')\$\" | fzy | xargs tmux switch-client -t"
 
 # Breaking out session
 bind-key C-b send-keys 'tat && exit' 'C-m'
