👌 IMPROVE: Update brewfile

--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -22,6 +22,7 @@ brew "docker"
 brew "docker-credential-helper"
 brew "exa"
 brew "fd"
+brew "ffmpeg"
 brew "fish"
 brew "fisher"
 brew "fnm"
@@ -42,12 +43,15 @@ brew "kubernetes-cli"
 brew "luv"
 brew "monolith"
 brew "most"
+brew "yt-dlp"
+brew "mpv"
 brew "neovim"
 brew "pass"
 brew "pipx"
 brew "procs"
 brew "ripgrep"
 brew "rust-analyzer"
+brew "rustup-init"
 brew "sd"
 brew "tmux"
 brew "todo-txt"
@@ -58,11 +62,18 @@ brew "zoxide"
 brew "eth-p/software/bat-extras"
 brew "tankerhq/repo/ruplacer"
 cask "adguard"
+cask "alfred"
+cask "anki"
+cask "hyperkey"
 cask "insomnia"
+cask "insync"
+cask "jetbrains-toolbox"
+cask "keka"
 cask "kitty"
-cask "macdown"
 cask "microsoft-auto-update"
 cask "microsoft-edge"
 cask "microsoft-teams"
+cask "numi"
+cask "rectangle-pro"
 cask "warp"
 cask "zoom"
