--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -16,4 +16,4 @@ map ctrl+shift+. next_tab
 map ctrl+shift+, previous_tab
 map ctrl+shift+right move_tab_forward
 map ctrl+shift+left move_tab_backward
-map ctrl+shift+f4 set_tab_title
+map ctrl+shift+' set_tab_title
