📦 NEW: Add detox

--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -18,6 +18,7 @@ brew "python@3.9"
 brew "qemu"
 brew "colima"
 brew "curlie"
+brew "detox"
 brew "docker"
 brew "docker-credential-helper"
 brew "exa"
@@ -33,6 +34,7 @@ brew "git"
 brew "git-delta"
 brew "glow"
 brew "go"
+brew "gopls"
 brew "python@3.10"
 brew "grip"
 brew "hugo"
