👌 IMPROVE: Add silent debugger extension API for Chromium

--- a/i3/config
+++ b/i3/config
@@ -55,7 +55,7 @@ bindsym $mod+Ctrl+m exec pavucontrol
 
 # Start Applications
 bindsym $mod+Ctrl+b exec kitty -e 'bmenu'
-bindsym $mod+F2 exec chromium
+bindsym $mod+F2 exec chromium --silent-debugger-extension-api
 bindsym $mod+F3 exec pcmanfm
 bindsym $mod+Shift+F3 exec pcmanfm_pkexec
 bindsym $mod+F4 exec icecat
