👌 IMPROVE: update brewfile

--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -14,15 +14,20 @@ brew "bit-git"
 brew "bottom"
 brew "broot"
 brew "caddy"
+brew "glib"
 brew "python@3.9"
 brew "qemu"
+brew "lima"
 brew "colima"
+brew "coreutils"
 brew "curlie"
 brew "detox"
 brew "docker"
 brew "docker-credential-helper"
 brew "exa"
 brew "fd"
+brew "harfbuzz"
+brew "python@3.10"
 brew "ffmpeg"
 brew "fish"
 brew "fisher"
@@ -35,7 +40,6 @@ brew "git-delta"
 brew "glow"
 brew "go"
 brew "gopls"
-brew "python@3.10"
 brew "grip"
 brew "hugo"
 brew "jq"
@@ -52,9 +56,11 @@ brew "pass"
 brew "pipx"
 brew "procs"
 brew "ripgrep"
+brew "rust"
 brew "rust-analyzer"
 brew "rustup-init"
 brew "sd"
+brew "slides"
 brew "tmux"
 brew "todo-txt"
 brew "universal-ctags"
