📦 NEW: Add bindings for catch-all notes file
https://news.ycombinator.com/item?id=22276184

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -87,6 +87,9 @@ bind-key h split-window -h "btm"
 # Quickly edit dumpfile
 bind-key b split-window -h "nvim ~/notes/braindump.md"
 
+# Quickly edit notes/log
+bind-key g split-window -h "nvim  -c \"+normal GO## $(date)\" -c ':s/$/\r/' -c 'se nohlsearch' ~/notes/notes.md"
+
 # Quickly edit todo file
 bind-key t split-window -h "nvim ~/notes/todo.md"
 
