--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -51,6 +51,7 @@ brew "monolith"
 brew "most"
 brew "yt-dlp"
 brew "mpv"
+brew "navi"
 brew "neovim"
 brew "pass"
 brew "pipx"
@@ -61,6 +62,7 @@ brew "rust-analyzer"
 brew "rustup-init"
 brew "sd"
 brew "slides"
+brew "tldr"
 brew "tmux"
 brew "todo-txt"
 brew "universal-ctags"
