--- a/broot/conf.toml
+++ b/broot/conf.toml
@@ -50,6 +50,8 @@ invocation = "edit"
 key = "F2"
 shortcut = "e"
 execution = "$EDITOR {file}"
+leave_broot = false
+apply_to = "file"
 
 [[verbs]]
 key = "ctrl-c"
