👌 IMPROVE: Use $PAGER for viewing files

--- a/broot/conf.toml
+++ b/broot/conf.toml
@@ -86,7 +86,7 @@ apply_to = "file"
 name = "view"
 invocation = "view"
 shortcut = "v"
-execution = "bat {file}"
+execution = "$PAGER {file}"
 leave_broot = false
 apply_to = "file"
 
