👌 IMPROVE: Set kitty macos option as alt

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,11 +1,15 @@
 font_family JetBrains Mono
 font_size 13.0
 adjust_line_height 120%
-enable_audio_bell no
+
 allow_remote_control yes
+enable_audio_bell no
 copy_on_select yes
 url_style single
+
 include themes/nord.conf
+
+macos_option_as_alt left
 
 map cmd+c copy_to_clipboard
 map cmd+v paste_from_clipboard
