--- a/helix/config.toml
+++ b/helix/config.toml
@@ -9,3 +9,19 @@ select = "underline"
 left = ["mode", "diagnostics"]
 center = ["file-name"]
 right = ["selections", "position", "file-encoding", "file-type"]
+
+[keys.normal]
+g = { a = "code_action", o = "goto_last_accessed_file" }
+"ret" = ["move_line_down", "goto_first_nonwhitespace"] # Maps the enter key to move to start of next line
+X = "extend_line_above"
+D = "delete_char_backward"
+
+[keys.insert]
+C-space = "completion"
+# Move cursor in insert mode
+A-h = "move_char_left"
+A-j = "move_line_down"
+A-k = "move_line_up"
+A-l = "move_char_right"
+A-o = "open_below"
+A-O = "open_above"
