👌 IMPROVE: Update brewfile

--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -22,6 +22,7 @@ brew "colima"
 brew "coreutils"
 brew "curlie"
 brew "detox"
+brew "difftastic"
 brew "docker"
 brew "docker-credential-helper"
 brew "exa"
@@ -41,11 +42,13 @@ brew "glow"
 brew "go"
 brew "gopls"
 brew "grip"
+brew "helix"
 brew "hugo"
 brew "jq"
 brew "jql"
 brew "keychain"
 brew "kubernetes-cli"
+brew "ltex-ls"
 brew "luv"
 brew "monolith"
 brew "most"
@@ -74,17 +77,20 @@ brew "tankerhq/repo/ruplacer"
 cask "adguard"
 cask "alfred"
 cask "anki"
+cask "element"
 cask "hyperkey"
 cask "insomnia"
 cask "insync"
 cask "jetbrains-toolbox"
 cask "keka"
 cask "kitty"
+cask "marmaduke-chromium"
 cask "microsoft-auto-update"
 cask "microsoft-edge"
 cask "microsoft-teams"
 cask "numi"
 cask "rectangle-pro"
 cask "remarkable"
+cask "sioyek"
 cask "warp"
 cask "zoom"
