--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -74,9 +74,12 @@ brew "xclip"
 brew "zoxide"
 brew "eth-p/software/bat-extras"
 brew "tankerhq/repo/ruplacer"
+cask "1password"
+cask "1password-cli"
 cask "adguard"
 cask "alfred"
 cask "anki"
+cask "dash"
 cask "element"
 cask "hyperkey"
 cask "insomnia"
