📦 NEW: Add notunes to prevent Music from starting

--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -91,6 +91,7 @@ cask "marmaduke-chromium"
 cask "microsoft-auto-update"
 cask "microsoft-edge"
 cask "microsoft-teams"
+cask "notunes"
 cask "numi"
 cask "rectangle-pro"
 cask "remarkable"
