📦 NEW: Add command for maybe file (tmux)

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -83,7 +83,10 @@ bind-key S display-panes\; command-prompt -p "pane #: "  "swap-pane -t '%%'"
 bind-key h split-window -h "btm"
 
 # Quickly edit dumpfile
-bind-key b split-window -h "nvim ~/notes/braindump.md"
+bind-key P split-window -h "nvim ~/notes/braindump.md"
+
+# Quickly edit maybe file
+bind-key b split-window -h "nvim ~/notes/maybe.md"
 
 # Quickly edit notes/log
 # https://news.ycombinator.com/item?id=22276184
