--- a/idea/.ideavimrc
+++ b/idea/.ideavimrc
@@ -141,7 +141,7 @@ nnoremap <leader>h :action TogglePopupHints<CR>
 nnoremap <leader>l :action Stylelint.Fix<CR>
 nnoremap <leader>o :action OptimizeImports<CR>
 nnoremap <C-r> :action RecentFiles<CR>
-nnoremap 'f :action ReformatCode<CR>
+nnoremap ,f :action ReformatCode<CR>
 nnoremap ,l :action RecentLocations<CR>
 nnoremap ,h  :action LocalHistory.ShowHistory<CR>
 nnoremap ]d :action GotoNextError<CR>
