--- a/idea/.ideavimrc
+++ b/idea/.ideavimrc
@@ -46,7 +46,7 @@ nnoremap <space> <nop>
 
 """ Manage .ideavimrc ---------------
 nnoremap \e :e ~/.ideavimrc<CR>
-nnoremap \r :action IdeaVim.ReloadVimRc.reload<CR>
+nnoremap \s :action IdeaVim.ReloadVimRc.reload<CR>
 
 """ Insert mappings ------------------
 inoremap hsr =>
@@ -70,7 +70,7 @@ map <Leader>j <Plug>(easymotion-j)
 map <Leader>k <Plug>(easymotion-k)
 map <Leader>h <Plug>(easymotion-linebackward)
 
-nnoremap \t :NERDTreeToggle<CR>
+nnoremap ,t :NERDTreeToggle<CR>
 
 """ Distraction Free Mode -------------------
 nnoremap <C-z> :action ToggleDistractionFreeMode<CR>
@@ -167,14 +167,14 @@ nnoremap gf :action Forward<CR>
 nnoremap <C-p> :action JumpToLastWindow<CR>
 nnoremap <C-x> :action HideAllWindows<CR>
 """ Running and Debugging -------------------
-nnoremap ,r :action ContextRun<CR>
-nnoremap ,c :action RunClass<CR>
-nnoremap ,o :action ChooseRunConfiguration<CR>
-nnoremap ,t :action ActivateRunToolWindow<CR>
-nnoremap ,u :action Rerun<CR>
-nnoremap ,f :action RerunFailedTests<CR>
-nnoremap ,b :action ToggleLineBreakpoint<CR>
-nnoremap ,d :action ContextDebug<CR>
-nnoremap ,n :action ActivateDebugToolWindow<CR>
+nnoremap \c :action ContextRun<CR>
+nnoremap \a :action RunClass<CR>
+nnoremap \o :action ChooseRunConfiguration<CR>
+nnoremap \t :action ActivateRunToolWindow<CR>
+nnoremap \r :action Rerun<CR>
+nnoremap \f :action RerunFailedTests<CR>
+nnoremap \b :action ToggleLineBreakpoint<CR>
+nnoremap \d :action ContextDebug<CR>
+nnoremap \n :action ActivateDebugToolWindow<CR>
 
 " Find more examples here: https://jb.gg/share-ideavimrc
