👌 IMPROVE: Update Brewfile

--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -1,9 +1,11 @@
+tap "bell-sw/liberica"
 tap "eth-p/software"
 tap "homebrew/bundle"
 tap "homebrew/cask"
 tap "homebrew/cask-fonts"
 tap "homebrew/cask-versions"
 tap "homebrew/core"
+tap "homebrew/services"
 tap "mtslzr/marmaduke-chromium"
 tap "tankerhq/repo"
 tap "toothbrush/toothbrush"
@@ -42,12 +44,13 @@ brew "glow"
 brew "go"
 brew "gopls"
 brew "grip"
+brew "hadolint"
 brew "helix"
 brew "hugo"
 brew "jq"
 brew "jql"
-brew "keychain"
 brew "kubernetes-cli"
+brew "libpq"
 brew "ltex-ls"
 brew "luv"
 brew "monolith"
@@ -56,6 +59,7 @@ brew "yt-dlp"
 brew "mpv"
 brew "navi"
 brew "neovim"
+brew "onefetch"
 brew "pass"
 brew "pipx"
 brew "procs"
@@ -65,6 +69,8 @@ brew "rust-analyzer"
 brew "rustup-init"
 brew "sd"
 brew "slides"
+brew "sqlx-cli"
+brew "stow"
 brew "tldr"
 brew "tmux"
 brew "todo-txt"
@@ -87,6 +93,7 @@ cask "insync"
 cask "jetbrains-toolbox"
 cask "keka"
 cask "kitty"
+cask "liberica-jdk18"
 cask "marmaduke-chromium"
 cask "microsoft-auto-update"
 cask "microsoft-edge"
