--- a/idea/.ideavimrc
+++ b/idea/.ideavimrc
@@ -58,8 +58,8 @@ set ideastatusicon=gray
 set idearefactormode=keep
 
 """ Plugin Mappings --------------------------------
-map  / <Plug>(easymotion-sn)
-omap / <Plug>(easymotion-tn)
+map  ; <Plug>(easymotion-sn)
+omap ; <Plug>(easymotion-tn)
 map  n <Plug>(easymotion-next)
 map  N <Plug>(easymotion-prev)
 nmap s <Plug>(easymotion-s2)
