👌 IMPROVE: Keybinding Easymotion/IdeaVim

--- a/idea/.ideavimrc
+++ b/idea/.ideavimrc
@@ -60,8 +60,6 @@ set idearefactormode=keep
 """ Plugin Mappings --------------------------------
 map  ; <Plug>(easymotion-sn)
 omap ; <Plug>(easymotion-tn)
-map  n <Plug>(easymotion-next)
-map  N <Plug>(easymotion-prev)
 nmap s <Plug>(easymotion-s2)
 nmap t <Plug>(easymotion-t2)
 
@@ -70,7 +68,8 @@ map <Leader>j <Plug>(easymotion-j)
 map <Leader>k <Plug>(easymotion-k)
 map <Leader>h <Plug>(easymotion-linebackward)
 
-nnoremap ,t :NERDTreeToggle<CR>
+nnoremap ,T :NERDTreeFocus<CR>
+nnoremap ,t :NERDTreeClose<CR>
 
 """ Distraction Free Mode -------------------
 nnoremap <C-z> :action ToggleDistractionFreeMode<CR>
