📦 NEW: Easymotion next with different key mappings

--- a/idea/.ideavimrc
+++ b/idea/.ideavimrc
@@ -60,6 +60,8 @@ set idearefactormode=keep
 """ Plugin Mappings --------------------------------
 map  ; <Plug>(easymotion-sn)
 omap ; <Plug>(easymotion-tn)
+map  ,n <Plug>(easymotion-next)
+map  ,N <Plug>(easymotion-prev)
 nmap s <Plug>(easymotion-s2)
 nmap t <Plug>(easymotion-t2)
 
