--- a/idea/.ideavimrc
+++ b/idea/.ideavimrc
@@ -70,8 +70,7 @@ map <Leader>j <Plug>(easymotion-j)
 map <Leader>k <Plug>(easymotion-k)
 map <Leader>h <Plug>(easymotion-linebackward)
 
-nnoremap ,T :NERDTreeFocus<CR>
-nnoremap ,t :NERDTreeClose<CR>
+nnoremap ,t :NERDTreeToggle<CR>
 
 """ Distraction Free Mode -------------------
 nnoremap <C-z> :action ToggleDistractionFreeMode<CR>
@@ -146,6 +145,8 @@ nnoremap <leader>s :action SaveAll<CR>
 nnoremap <leader>l :action Stylelint.Fix<CR>
 nnoremap <leader>o :action OptimizeImports<CR>
 nnoremap <leader>a :action Vcs.RollbackChangedLines<CR>
+nnoremap <leader>k :action QuickJavaDoc<CR>
+nnoremap <leader>q :action QuickTypeDefinition<CR>
 nnoremap <C-r> :action RecentFiles<CR>
 nnoremap ,f :action ReformatCode<CR>
 nnoremap ,p :action ReformatWithPrettierAction<CR>
