--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -86,7 +86,7 @@ bind-key h split-window -h "btm"
 bind-key P split-window -h "nvim ~/notes/braindump.md"
 
 # Quickly edit maybe file
-bind-key b split-window -h "nvim ~/notes/maybe.md"
+bind-key y split-window -h "nvim ~/notes/maybe.md"
 
 # Quickly edit notes/log
 # https://news.ycombinator.com/item?id=22276184
