--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -34,10 +34,10 @@ set -g renumber-windows on
 unbind r
 bind r source-file ~/.tmux.conf \; display "Reloaded tmux config!"
 
-# Remap prefix from 'C-b' to 'C-s'
+# Remap prefix from 'C-b' to 'C-q'
 unbind C-b                  # remove bind for C-b
-set-option -g prefix C-s
-bind-key -r C-s send-prefix
+set-option -g prefix C-q
+bind-key -r C-q send-prefix
 
 # Restoring Clear Scren
 bind C-l send-keys 'C-l'
