👌 IMPROVE: Update Brewfile

--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -1,21 +1,16 @@
-tap "bell-sw/liberica"
 tap "eth-p/software"
 tap "homebrew/bundle"
-tap "homebrew/cask"
 tap "homebrew/cask-fonts"
 tap "homebrew/cask-versions"
-tap "homebrew/core"
 tap "homebrew/services"
-tap "mtslzr/marmaduke-chromium"
 tap "tankerhq/repo"
-tap "toothbrush/toothbrush"
 brew "arkade"
 brew "bash"
 brew "bat"
 brew "bit-git"
 brew "bottom"
 brew "broot"
-brew "caddy"
+brew "caddy", restart_service: true
 brew "glib"
 brew "python@3.9"
 brew "qemu"
@@ -30,19 +25,21 @@ brew "docker-credential-helper"
 brew "exa"
 brew "fd"
 brew "harfbuzz"
-brew "python@3.10"
 brew "ffmpeg"
 brew "fish"
 brew "fisher"
 brew "fnm"
 brew "fzf"
 brew "fzy"
+brew "gawk"
 brew "gh"
 brew "git"
 brew "git-delta"
 brew "glow"
 brew "go"
 brew "gopls"
+brew "gotify"
+brew "python@3.10"
 brew "grip"
 brew "hadolint"
 brew "helix"
@@ -53,6 +50,8 @@ brew "kubernetes-cli"
 brew "libpq"
 brew "ltex-ls"
 brew "luv"
+brew "lychee"
+brew "marksman"
 brew "monolith"
 brew "most"
 brew "yt-dlp"
@@ -70,10 +69,14 @@ brew "rustup-init"
 brew "sd"
 brew "slides"
 brew "sqlx-cli"
+brew "starship"
 brew "stow"
 brew "tldr"
 brew "tmux"
 brew "todo-txt"
+brew "translate-shell"
+brew "tut"
+brew "typst"
 brew "universal-ctags"
 brew "volta"
 brew "xclip"
@@ -83,25 +86,36 @@ brew "tankerhq/repo/ruplacer"
 cask "1password"
 cask "1password-cli"
 cask "adguard"
+cask "adobe-digital-editions"
 cask "alfred"
-cask "anki"
+cask "alt-tab"
+cask "brave-browser"
+cask "calibre"
 cask "dash"
 cask "element"
+cask "figma"
+cask "firefox-developer-edition"
+cask "font-jetbrains-mono-nerd-font"
 cask "hyperkey"
 cask "insomnia"
 cask "insync"
 cask "jetbrains-toolbox"
+cask "jitsi-meet"
 cask "keka"
+cask "keyboardcleantool"
 cask "kitty"
-cask "liberica-jdk18"
-cask "marmaduke-chromium"
+cask "macdown"
+cask "michaelvillar-timer"
 cask "microsoft-auto-update"
 cask "microsoft-edge"
 cask "microsoft-teams"
+cask "mos"
 cask "notunes"
 cask "numi"
+cask "pdfsam-basic"
 cask "rectangle-pro"
 cask "remarkable"
+cask "shortcat"
 cask "sioyek"
-cask "warp"
+cask "skype"
 cask "zoom"
