--- a/idea/.ideavimrc
+++ b/idea/.ideavimrc
@@ -140,15 +140,15 @@ nnoremap <leader>c :action CommentByLineComment<CR>
 nnoremap <leader>r :action RefactoringMenu<CR>
 nnoremap <leader>t :action Refactorings.QuickListPopupAction<CR>
 nnoremap <leader>h :action TogglePopupHints<CR>
-nnoremap <leader>f :action GotoFile<CR>
+nnoremap <leader>f :action ReformatCode<CR>
 nnoremap <leader>s :action SaveAll<CR>
 nnoremap <leader>l :action Stylelint.Fix<CR>
 nnoremap <leader>o :action OptimizeImports<CR>
 nnoremap <leader>a :action Vcs.RollbackChangedLines<CR>
 nnoremap <leader>k :action QuickJavaDoc<CR>
 nnoremap <leader>q :action QuickTypeDefinition<CR>
-nnoremap <C-r> :action RecentFiles<CR>
-nnoremap ,f :action ReformatCode<CR>
+nnoremap ,r :action RecentFiles<CR>
+nnoremap ,f :action GotoFile<CR>
 nnoremap ,p :action ReformatWithPrettierAction<CR>
 nnoremap ,l :action RecentLocations<CR>
 nnoremap ,h  :action LocalHistory.ShowHistory<CR>
