👌 IMPROVE: Rework kitty theme changer & add github theme

--- a/kitty/.config/kitty/themes/intellij-light.conf
+++ b/kitty/.config/kitty/themes/intellij-light.conf
@@ -1,6 +1,8 @@
 # IntelliJ Light Colorscheme for Kitty
 # Based on https://github.com/chiendo97/intellij.vim
 
+## IntelliJ Light
+
 foreground            #383A42
 background            #FAFAFA
 selection_foreground  #383A42
