--- a/kitty/.config/kitty/themes/nord.conf
+++ b/kitty/.config/kitty/themes/nord.conf
@@ -2,6 +2,8 @@
 # Based on:
 # - https://gist.github.com/marcusramberg/64010234c95a93d953e8c79fdaf94192
 # - https://github.com/arcticicestudio/nord-hyper
+#
+## Nord
 
 foreground            #D8DEE9
 background            #2E3440
