👌 IMPROVE: Prettify config

--- a/kitty/.config/kitty/themes/intellij-light.conf
+++ b/kitty/.config/kitty/themes/intellij-light.conf
@@ -1,7 +1,8 @@
-# IntelliJ Light Colorscheme for Kitty
-# Based on https://github.com/chiendo97/intellij.vim
+# vim:ft=kitty
+## IntelliJ Light Colorscheme for Kitty
+## Based on https://github.com/chiendo97/intellij.vim
 
-## IntelliJ Light
+## name: IntelliJ Light
 
 foreground            #383A42
 background            #FAFAFA
