📦 NEW: Use prettier in helix

--- a/helix/.config/helix/languages.toml
+++ b/helix/.config/helix/languages.toml
@@ -1,18 +1,44 @@
 [[language]]
-file-types = ["md", "txt"]
+file-types = ["md"]
 indent = { tab-width = 2, unit = "  " }
 injection-regex = "md|markdown"
-language-server = { command = "ltex-ls" }
+language-server = { command = "marksman", args=["server"] }
 name = "markdown"
-roots = [".git"]
+roots = [".marksman.toml"]
 scope = "source.md"
 
-# [[language]]
-# file-types = ["md"]
-# indent = { tab-width = 2, unit = "  " }
-# injection-regex = "md|markdown"
-# language-server = { command = "marksman", args=["server"] }
-# name = "markdown"
-# roots = [".marksman.toml"]
-# scope = "source.md"
+[[language]]
+name = "html"
+formatter = { command = 'prettier', args = ["--parser", "html"] }
 
+[[language]]
+name = "json"
+formatter = { command = 'prettier', args = ["--parser", "json"] }
+
+[[language]]
+name = "css"
+formatter = { command = 'prettier', args = ["--parser", "css"] }
+
+[[language]]
+name = "scss"
+formatter = { command = 'prettier', args = ["--parser", "scss"] }
+
+[[language]]
+name = "jsx"
+formatter = { command = 'prettier', args = ["--parser", "typescript"] }
+auto-format = true
+
+[[language]]
+name = "javascript"
+formatter = { command = 'prettier', args = ["--parser", "typescript"] }
+auto-format = true
+
+[[language]]
+name = "tsx"
+formatter = { command = 'prettier', args = ["--parser", "typescript"] }
+auto-format = true
+
+[[language]]
+name = "typescript"
+formatter = { command = 'prettier', args = ["--parser", "typescript"] }
+auto-format = true
